--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -425,10 +425,6 @@
                        Grid.ColumnSpan="2"
                        Grid.Row="1"
                        Margin="5,5,5,5">
-                    <Button Content="MAC Aliases"
-                        Click="mnmbutton"/>
-                    <Button Content="IP4 Aliases"
-                        Click="inmbutton"/>
                     <CheckBox Name="displayaliascheckbox"
                           Content="Display Aliases"
                           IsChecked="{Binding Source={StaticResource GUIUtilKey}, Path=Instance.UseAliases, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
@@ -565,7 +561,7 @@
 				            VirtualizingPanel.IsVirtualizing="True"
 				            VirtualizingPanel.VirtualizationMode="Recycling"
 				            AutoGenerateColumns="False"
-				            ItemsSource="{Binding Path=dgtable}"
+				            ItemsSource="{Binding Path=inmdgtable}"
 				            ItemStringFormat="x"
 				            CanUserAddRows="False"
                             CellEditEnding="inmcelleditending"> 
