--- a/pviewer5/MainWindow.xaml
+++ b/pviewer5/MainWindow.xaml
@@ -549,7 +549,8 @@
 				            ItemsSource="{Binding Path=inmtable}"
 				            ItemStringFormat="x"
 				            CanUserAddRows="False"
-                            CellEditEnding="IP4Util.inmcelleditending"> 
+                        CellEditEnding="inmcelleditending">
+                        
                         <DataGrid.Columns>
                             <DataGridTextColumn Header="IP4 Address">
                                 <DataGridTextColumn.Binding>
